[gd_scene load_steps=2 format=3 uid="uid://blhtxu6bwdox1"]

[ext_resource type="Script" path="res://AutoLoad/NetworkManager/NetworkManager.gd" id="1"]

[node name="NetworkManager" type="Node"]
script = ExtResource("1")

[node name="HTTPRequestScan" type="HTTPRequest" parent="."]

[node name="HTTPRequestInsert" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequestScan" to="." method="_on_HTTPRequestScan_request_completed"]
[connection signal="request_completed" from="HTTPRequestInsert" to="." method="_on_HTTPRequestInsert_request_completed"]
